<resources>
    <string name="app_name">Breadcrumbs Game</string>
    <string name="question">Question</string>
    <string name="hint">Hint</string>
    <string name="background">Background</string>
    <string name="scan_qrcode_button">Scan QRCode</string>
    <string name="no_qrcode_captured">No QRCode captured</string>
    <string name="input_code_manually">Input Code Manually</string>
    <string name="qrcode_error_format">"Error reading QRCode: %1$s"</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="test_string">Testing</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="currentScore">Score: 0</string>
    <string name="details">Name\nEmail: </string>
    <string name="back_to_map">back to map</string>
    <string name="code">Code</string>
    <string name="your_current_score_is_0">Your current score is: 0</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="welcome_paul">Welcome Paul</string>
    <string name="breadcrumbs_game">Breadcrumbs Game</string>
    <string name="help_button">Help</string>
    <string name="map">Map</string>
    <string name="score_help">Here is your current score!</string>
    <string name="map_help">Navigate around the space and search for hint and question QR codes located in the areas marked by the search icon.\n</string>
    <string name="map_help1">This is the Map</string>
    <string name="camera_help">Click here to go to the camera and scan them</string>
    <string name="sponsor_1">First Sponsor</string>
    <string name="sponsor_2">Second Sponsor</string>
    <string name="sponsor_3">Third Sponsor</string>
    <string name="sponsor_4">Fourth Sponsor</string>
    <string name="continue_map">Continue to Map</string>
    <string name="hint_image">Image related to the question</string>
</resources>
