<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hint_textview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/hint"
        android:textSize="20sp"
        android:textAlignment="gravity"
        android:gravity="center"
        android:layout_weight="2"/>

    <ImageView
        android:id="@+id/hint_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/textview_border"
        android:contentDescription="@string/hint_image"
        android:layout_weight="3"/>

    <TextView
        android:id="@+id/hint_textview2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/button_back_hint"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/back_to_map"
        android:textColor="@color/colorWhite"
        android:textSize="15sp" />

</LinearLayout>