<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home_help_layout">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:alpha="0.6"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:alpha="1">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"/>

        <TextView
            android:id="@+id/help_view_score"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/score_help"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textColorHighlight="@color/colorWhite"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:layout_weight="1.5"
            android:gravity="center_vertical"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/help_view_map"
            android:layout_width="wrap_content"
            android:layout_height="515dp"
            android:layout_gravity="center_vertical"
            android:text="@string/map_help"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:layout_weight="1"
            android:background="@drawable/textview_border"
            android:contentDescription="@string/map"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"
           android:text="@string/camera_help"
           android:textAlignment="center"
           android:gravity="center_vertical"
           android:textColor="@color/colorAccent"
           android:textSize="20sp"
           android:textStyle="bold"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/help_view_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_check"
        android:layout_margin="16dp"
        android:layout_gravity="center|end" />


</FrameLayout>