<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/help_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content_frame_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/help_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/AppTitleStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/sponsor_1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:contentDescription="@string/sponsor_1"
                    android:src="@drawable/sponsor_1"
                    android:scaleType="fitCenter"
                    android:background="@color/colorWhite"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/sponsor_2"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:contentDescription="@string/sponsor_2"
                    android:src="@drawable/sponsor_2"
                    android:scaleType="fitCenter"
                    android:background="@color/colorWhite"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageButton
                    android:id="@+id/sponsor_3"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:contentDescription="@string/sponsor_3"
                    android:src="@drawable/sponsor_3"
                    android:scaleType="fitCenter"
                    android:background="@color/colorWhite"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"/>

                <ImageButton
                    android:id="@+id/sponsor_4"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:contentDescription="@string/sponsor_4"
                    android:src="@drawable/sponsor_4"
                    android:scaleType="fitCenter"
                    android:background="@color/colorWhite"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/help_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:src="@drawable/ic_check"
                android:layout_margin="16dp"/>

        </LinearLayout>


    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>